<!-- 

	Maven Junit, Sonar and Artifactory commands:
	
	mvn clean 
	mvn test -Dtest=CalcTest   // -Dtest is optional 
	mvn sonar:sonar            // sends code to sonar in localhost
	mvn deploy                 // sends final artifact .jar to artifactory
	
	* Run all these task in jenkins pipeline 
	* Separate every task by stages (clean) (test) (sonar) (deploy-art)
	
 -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.calculator</groupId>
	<artifactId>simple-calc</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Simple Calc</name>
	<description>Does sums and substractions</description>

	<repositories>
		<repository>
			<id>central</id>
			<name>Central</name>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
	</repositories>
	
	<properties>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<junit-platform.version>5.3.1</junit-platform.version>
	</properties>

	<dependencies>
	
		<!-- Junit5 Jupiter dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit-platform.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit-platform.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>1.0.0-M4</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.4.0</version>
		</dependency>
	</dependencies>


	<build>
	    <!-- location of resources depend on where are located the java resource folders -->
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/main/test</testSourceDirectory> <!--  Because test class is in src/test -->
		
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<!-- Maven Test plugins -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<testSourceDirectory>${basedir}/src/main/test/</testSourceDirectory>
<!-- 					<testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
 -->					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<!-- // Maven Test Plugins -->
			
			<!--  SonarQube plugin -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>3.4.0.905</version>
            </plugin>
			<!--  // SonarQube plugin -->
			
		</plugins>

	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>snapshots</id>
			<name>USABOS279979L-snapshots</name>
			<url>http://localhost:8040/artifactory/libs-snapshot</url>
		</snapshotRepository>
	</distributionManagement>

</project>